changed file handlers and record parser to support multiple input/output files