@@ -1,7 +1,16 @@
 package eu.scape_project.pt.util;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
+import java.util.StringTokenizer;
+import java.util.regex.Pattern;
+
+import org.apache.commons.logging.Log;
+import org.apache.commons.logging.LogFactory;
+
+import eu.scape_project.pt.mapred.SimpleWrapper;
 
 /*
  * A parser for specific records that are passed to the map() function
@@ -10,40 +19,61 @@ import java.net.URL;
  */
 public class FNRecordParser {
 	
-	private String inFile = null;
-	private String outFile = null;
+	private static Log LOG = LogFactory.getLog(FNRecordParser.class);
+
+	public static String IN_OPT = "-i";
+	public static String OUT_OPT = "-o";
+	
+	private String inFiles[] = null;
+	private String outFiles[] = null;
+
+	//inFile = record.trim().substring(0, record.indexOf(' '));
+	//outFile = record.trim().substring(record.indexOf(' '), record.length());
 	
 	public FNRecordParser(String record) {
-		inFile = record.trim().substring(0, record.indexOf(' '));
-		outFile = record.trim().substring(record.indexOf(' '), record.length());
+		int i = -1;
+		record = record.trim();
+		//any output files?
+		if( (i = record.indexOf(OUT_OPT)) > -1 ) {
+			outFiles = record.substring(i+OUT_OPT.length(), record.length()).trim().split(Pattern.quote(" "));
+			record = record.substring(0, i).trim();
+		} else {
+			LOG.info("no input file found in map() record");
+		}
+		//any output files?
+		if( (i = record.indexOf(IN_OPT)) > -1) {
+			inFiles = record.substring(i+IN_OPT.length(), record.length()).trim().split(Pattern.quote(" "));
+		} else {
+			LOG.info("no output file found in map() record");
+		}
 	}
 	
-	public String getProtocol(String url) throws MalformedURLException {
-		return (new URL(url)).getProtocol();
+	public String getScheme(String uri) throws URISyntaxException {
+		return (new URI(uri)).getScheme();
 	}
 		
-	public boolean isHDFS(String url) throws MalformedURLException {
-		return this.getProtocol(url).toLowerCase().equals("hdfs");
+	public boolean isHDFS(String uri) throws URISyntaxException {
+		return this.getScheme(uri).toLowerCase().equals("hdfs");
 	}
 	
-	public boolean isFILE(String url) throws MalformedURLException {
-		return this.getProtocol(url).toLowerCase().equals("file");
+	public boolean isFILE(String uri) throws URISyntaxException {
+		return this.getScheme(uri).toLowerCase().equals("file");
 	}
 
-	public String getInFile() {
-		return inFile;
+	public String[] getInFiles() {
+		return inFiles;
 	}
 
-	public void setInFile(String inFile) {
-		this.inFile = inFile;
+	public void setInFiles(String[] inFiles) {
+		this.inFiles = inFiles;
 	}
 
-	public String getOutFile() {
-		return outFile;
+	public String[] getOutFiles() {
+		return outFiles;
 	}
 
-	public void setOutFile(String outFile) {
-		this.outFile = outFile;
+	public void setOutFiles(String[] outFiles) {
+		this.outFiles = outFiles;
 	}
 
 }
